--- a/hermes/package.json
+++ b/hermes/package.json
@@ -1,15 +1,37 @@
 {
-  "name": "securite-plateau",
+  "name": "plateau-tournant-securite",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "source": "src/main.js",
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "",
+    "build": "parcel build src/index.html --dist-dir build/ ",
   },
-  "author": "",
+  "author": "Benjamin PLA, William HAMET & Hugo JUNIOR",
   "license": "ISC",
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "aws-sdk": "^2.1348.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^5.7.1",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
+    "nodemon": "^2.0.22",
+    "os-browserify": "^0.3.0",
+    "parcel": "^2.6.2",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
+    "util": "^0.12.5"
+  },
   "dependencies": {
+    "chart.js": "^4.2.1",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.6"
   }
 }
