--- a/hermes/package.json
+++ b/hermes/package.json
@@ -2,15 +2,17 @@
   "name": "plateau-tournant-securite",
   "version": "1.0.0",
   "description": "",
-  "source": "src/main.js",
-
+  "source": "src/main.ts",
   "scripts": {
-    "test": "",
-    "build": "parcel build src/index.html --dist-dir build/ ",
+    "test": "parcel src/index.html --port 3000 --open",
+    "build": "parcel build src/index.html --dist-dir build/",
+    "clear": "rm -rf build/*"
   },
   "author": "Benjamin PLA, William HAMET & Hugo JUNIOR",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1348.0",
     "browserify-zlib": "^0.2.0",
@@ -26,11 +28,14 @@
     "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "typescript": "^5.0.4",
     "url": "^0.11.0",
     "util": "^0.12.5"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "chart.js": "^4.2.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6"
   }
