--- a/hermes/package.json
+++ b/hermes/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "@types/sqlite3": "^3.1.8",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1348.0",
     "browserify-zlib": "^0.2.0",
