--- a/hermes/package.json
+++ b/hermes/package.json
@@ -2,11 +2,13 @@
   "name": "plateau-tournant-securite",
   "version": "1.0.0",
   "description": "",
-  "source": "src/main.ts",
+  "source": "src/backend/main.ts",
   "scripts": {
     "test": "parcel src/index.html --port 3000 --open",
-    "build": "parcel build src/index.html --dist-dir build/",
-    "clear": "rm -rf build/*"
+    "build": "parcel build src/frontend/index.html --dist-dir build/public/ && tsc --p ./src/backend/tsconfig.json",
+    "run": "node ./build/main.js",
+    "clear": "rm -rf build/*",
+    "reset": ""
   },
   "author": "Benjamin PLA, William HAMET & Hugo JUNIOR",
   "license": "ISC",
@@ -14,24 +16,8 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "@types/sqlite3": "^3.1.8",
-    "assert": "^2.0.0",
-    "aws-sdk": "^2.1348.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^5.7.1",
-    "crypto-browserify": "^3.12.0",
-    "events": "^3.3.0",
-    "nodemon": "^2.0.22",
-    "os-browserify": "^0.3.0",
     "parcel": "^2.6.2",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
-    "punycode": "^1.4.1",
-    "querystring-es3": "^0.2.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "typescript": "^5.0.4",
-    "url": "^0.11.0",
-    "util": "^0.12.5"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
