--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,13 @@ node_modules/
 .vscode/
 
 # Built version
-hermes/build/
+build/
 
 # Parcel's cache
-hermes/.parcel-cache/
+.parcel-cache/
 
 # Hermes TODO list
 hermes/TODO.md
+
+# macOS Desktop Services Store files
+.DS_Store
