Tentative de suppression du bundler js superflu

--- a/hermes/package.json
+++ b/hermes/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "clear:build": "rm -rf build/*.js build/public/*",
+    "clear-build": "rimraf -g ./build/\"**\"/*",
     "test:frontend": "parcel watch src/frontend/index.html --dist-dir build/public/",
     "test:backend": "nodemon --watch src/backend --ext ts,json --exec \"npm run build:backend && node build/main.js\"",
     "test": "npm run clear:build && concurrently \"npm run test:frontend\" \"npm run test:backend\"",
     "build:frontend": "parcel build src/frontend/index.html --dist-dir build/public/",
     "build:backend": "tsc --p src/backend/tsconfig.json",
     "build": "npm run clear:build && npm run build:frontend && npm run build:backend",
-    "start": "node build/main.js"
+    "start": "node build/main.js",
+    "test-cmd": "npm run clear-build && rsync -a --exclude='*.ts' ./src/ ./build/ && tsc --p ./tsconfig.json",
+    "test-cmd2": "copyfiles src/public/**/* build/"
   },
   "author": "Hugo JUNIOR",
   "license": "",
@@ -25,7 +27,9 @@
   },
   "dependencies": {
     "chart.js": "^4.2.1",
+    "copyfiles": "^2.4.1",
     "express": "^4.18.2",
+    "rimraf": "^5.0.1",
     "sqlite3": "^5.1.6"
   }
 }
