--- a/hermes/package.json
+++ b/hermes/package.json
@@ -23,10 +23,8 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "chart.js": "^4.2.1",
     "express": "^4.18.2",
     "rimraf": "^5.0.1",
-    "sqlite3": "^5.1.6",
-    "ts-node": "^10.9.1"
+    "sqlite3": "^5.1.6"
   }
 }
