--- a/cerbere/tests/TUSignalement/Makefile
+++ b/cerbere/tests/TUSignalement/Makefile
@@ -8,12 +8,12 @@ BIN = ./bin
 
 all: $(LIB)/Signalement.o 
 	@echo "Compilation programme principal"
-	$(CC) $(FLAGS) $(SRC)/tuSignalement.cpp $(LIB)/Signalement.o 
+	$(CC) $(FLAGS) $(SRC)/tuSignalement.cpp $(LIB)/Signalement.o -std=c++17 -lpthread -o $(BIN)/Signalement
 	@echo "Compilation terminée"
 
 
 $(LIB)/Signalement.o : $(SRC)/Signalement.cpp $(INCLUDE)/Signalement.h
 	@echo "Compilation classe Signalement"
-	$(CC) -c $(SRC)/Signalement.cpp -std=c++14 -o $@ $(FLAGS) -lpthread
+	$(CC) -c $(SRC)/Signalement.cpp -std=c++17 -o $@ $(FLAGS) -lpthread
 
 
